Added linkedin social icon

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -5,6 +5,7 @@
     "colors_background_2": "#f2f9fc",
     "social_facebook_link": "https:\/\/www.facebook.com\/thehappyhowl",
     "social_instagram_link": "https:\/\/instagram.com\/thehappyhowl",
+    "social_linkedin_link": "https:\/\/www.linkedin.com\/company\/thehappyhowl\/about",
     "sections": {
       "announcement-bar": {
         "type": "announcement-bar",
