--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -31,7 +31,7 @@
           "logo": "shopify:\/\/shop_images\/HappyHowlLogo_Final_Pos.png",
           "logo_width": 150,
           "logo_position": "middle-left",
-          "menu": "main-menu-v1",
+          "menu": "header-menu",
           "show_line_separator": true,
           "enable_sticky_header": true
         }
