--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -4,9 +4,14 @@
     "colors_accent_1": "#76bc21",
     "colors_accent_2": "#66c9ba",
     "colors_background_2": "#f2f9fc",
+    "type_header_font": "assistant_n4",
     "social_facebook_link": "https:\/\/www.facebook.com\/thehappyhowl",
     "social_instagram_link": "https:\/\/instagram.com\/thehappyhowl",
     "social_linkedin_link": "https:\/\/www.linkedin.com\/company\/thehappyhowl\/about",
+    "favicon": "shopify:\/\/shop_images\/HappyHowlLogo_Favicon_368c.jpg",
+    "checkout_logo_image": "shopify:\/\/shop_images\/HappyHowlLogo_Final_Pos_75e334e6-1488-4562-98fd-a6ffef323224.png",
+    "checkout_accent_color": "#76bc21",
+    "checkout_button_color": "#76bc21",
     "sections": {
       "announcement-bar": {
         "type": "announcement-bar",
@@ -30,6 +35,7 @@
       "header": {
         "type": "header",
         "settings": {
+          "color_scheme": "background-1",
           "logo": "shopify:\/\/shop_images\/HappyHowlLogo_Final_Pos.png",
           "logo_width": 150,
           "logo_position": "middle-left",
