--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -93,6 +93,20 @@
           "enable_language_selector": true,
           "payment_enable": false
         }
+      },
+      "main-password-header": {
+        "type": "main-password-header",
+        "settings": {
+          "logo": "shopify:\/\/shop_images\/HappyHowlLogo_Final_Pos_75e334e6-1488-4562-98fd-a6ffef323224.png",
+          "logo_max_width": 150,
+          "color_scheme": "background-2"
+        }
+      },
+      "main-password-footer": {
+        "type": "main-password-footer",
+        "settings": {
+          "color_scheme": "accent-1"
+        }
       }
     },
     "content_for_index": [
