Live: Store changes

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -3,7 +3,7 @@
     "colors_solid_button_labels": "#ffffff",
     "colors_accent_1": "#76bc21",
     "colors_accent_2": "#66c9ba",
-    "colors_background_2": "#f2f9fc",
+    "colors_background_2": "#66c9ba",
     "type_header_font": "quicksand_n7",
     "type_body_font": "quicksand_n5",
     "social_facebook_link": "https:\/\/www.facebook.com\/thehappyhowl",
