--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -7,7 +7,7 @@
     "type_header_font": "quicksand_n7",
     "type_body_font": "quicksand_n5",
     "social_facebook_link": "https:\/\/www.facebook.com\/thehappyhowl",
-    "social_instagram_link": "https:\/\/instagram.com\/thehappyhowl",
+    "social_instagram_link": "",
     "social_linkedin_link": "https:\/\/www.linkedin.com\/company\/thehappyhowl\/about",
     "favicon": "shopify:\/\/shop_images\/HappyHowlLogo_Favicon_368c.jpg",
     "currency_code_enabled": true,
