--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -6,6 +6,7 @@
     "colors_background_2": "#66c9ba",
     "type_header_font": "quicksand_n7",
     "type_body_font": "quicksand_n5",
+    "accent_icons": "accent-1",
     "social_facebook_link": "https:\/\/www.facebook.com\/thehappyhowl",
     "social_instagram_link": "",
     "social_linkedin_link": "https:\/\/www.linkedin.com\/company\/thehappyhowl\/about",
